fix: align code left
This style change makes sure that we align multiline code to the left. I
don't think any other alignment makes sense. This is especially useful,
because default anki styling aligns to the center.

--- a/assets/_ch-hljs-solarized.css
+++ b/assets/_ch-hljs-solarized.css
@@ -25,6 +25,10 @@ base0E  #6c71c4  Keywords, Storage, Selector, Markup Italic, Diff Changed
 base0F  #d33682  Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
 */
 
+pre code.hljs {
+  text-align: left;
+}
+
 .hljs {
   color: #586e75;
   background: #fdf6e3;
